fix transcription alignment: sheet sync, GPU detection, beat calculation, and YassEnum compile errors
- Fix YassSheet 'rows != rects' error by calling sheet.init() before updateGapBpm() so rects are rebuilt before setZoom() triggers update()
- Fix YassEnum implementations (7 files) using Arrays.asList(values()) instead of List.of(values()) which wrapped the array as a single element
- Fix WhisperXHealthCheckService to resolve configured ffmpegPath instead of bare 'ffmpeg'; add torch version and CUDA build string to health check output
- Fix TranscriptionEngine fallback to prefer WhisperX when OpenAI key is absent
- Fix TranscriptNoteRebuildService: use floor for note end beat so notes are never longer than the timestamp; fix page break placement; remove normalizeTiming post-pass that clobbered correct beats
- Fix LyricsAlignmentService page break repositioning and interpolation to exclude page breaks
- Fix HTML tags visible in result dialog by wrapping summary in JLabel
- Fix escapeHtml to convert newlines to <br> in both transcription services