@@ -2,6 +2,7 @@ package yass.integration.transcription.whisperx;
 
 import yass.YassEnum;
 
+import java.util.Arrays;
 import java.util.List;
 
 public enum WhisperXModel implements YassEnum {
@@ -26,7 +27,7 @@ public enum WhisperXModel implements YassEnum {
 
     @Override
     public List<YassEnum> listElements() {
-        return List.of(values());
+        return Arrays.asList(values());
     }
 
     @Override
